<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_metrics_collector</name>
  <version>0.0.0</version>
  <description>Node and aggregation utilities to measure and publish system metrics.</description>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>metrics_statistics_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>metrics_statistics_msgs</exec_depend>

  <test_depend>roscpp</test_depend>

</package>
